assets/front-end/css/view/info-box.css
.infobox-icon {
  height: auto;
}
.infobox-icon .eaa-svg {
  font-size: 40px;
}
.infobox-icon .eaa-svg svg {
  width: 1em;
  height: 1em;
}
.infobox-icon .infobox-icon-wrap {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: auto;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.infobox-icon .infobox-icon-wrap i {
  -webkit-transition: 0.3s;
  transition: 0.3s;
}
.infobox-content .infobox-title-section {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}
.infobox-content .infobox-title-section .title {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}
.infobox-content .infobox-title-section .sub_title {
  margin: 0 0 10px 0;
}
/*--- For Content Alignment ---*/
.eael-infobox-content-v-align--middle .eael-infobox .infobox-content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.eael-infobox-content-v-align--bottom .eael-infobox .infobox-content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}
.eael-infobox-content-align--left .eael-infobox .infobox-icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
}
.eael-infobox-content-align--left .eael-infobox .infobox-content,
.eael-infobox-content-align--left .eael-infobox .infobox-button {
  text-align: left;
}
.eael-infobox-content-align--right .eael-infobox .infobox-icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}
.eael-infobox-content-align--right .eael-infobox .infobox-content,
.eael-infobox-content-align--right .eael-infobox .infobox-button {
  text-align: right;
}
.eael-infobox-content-align--right.eael-infobox-icon-bg-shape-none .infobox-icon-wrap {
  -webkit-box-pack: end;
      -ms-flex-pack: end;
          justify-content: flex-end;
}
.eael-infobox-content-align--left.eael-infobox-icon-bg-shape-none .infobox-icon-wrap {
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
}
.eael-infobox-content-align--center .eael-infobox .infobox-icon,
.eael-infobox-content-align--center .eael-infobox .infobox-content,
.eael-infobox-content-align--center .eael-infobox .infobox-button {
  text-align: center;
}
.eael-infobox-content-align--left .infobox-title-section {
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: start;
}
.eael-infobox-content-align--right .infobox-title-section {
  -webkit-box-align: end;
      -ms-flex-align: end;
          align-items: end;
}
.eael-infobox-content-align--center .infobox-title-section {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
/*--- For icon background shape ---*/
.eael-infobox-icon-bg-shape-square .infobox-icon .infobox-icon-wrap,
.eael-infobox-icon-bg-shape-radius .infobox-icon .infobox-icon-wrap,
.eael-infobox-icon-bg-shape-circle .infobox-icon .infobox-icon-wrap {
  width: 90px;
  height: 90px;
  text-align: center;
}
.eael-infobox-icon-hover-bg-shape-square:hover .infobox-icon .infobox-icon-wrap {
  border-radius: 0;
}
.eael-infobox-icon-bg-shape-radius .infobox-icon .infobox-icon-wrap,
.eael-infobox-icon-hover-bg-shape-radius:hover .infobox-icon .infobox-icon-wrap {
  border-radius: 15px;
}
.eael-infobox-icon-bg-shape-radius .infobox-icon .infobox-icon-wrap {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}
.eael-infobox-icon-bg-shape-circle .infobox-icon .infobox-icon-wrap,
.eael-infobox-icon-hover-bg-shape-circle:hover .infobox-icon .infobox-icon-wrap {
  border-radius: 50%;
}
.eael-infobox-icon-bg-shape-square .infobox-icon .infobox-icon-wrap i,
.eael-infobox-icon-bg-shape-circle .infobox-icon .infobox-icon-wrap i {
  margin-top: 50%;
  -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
          transform: translateY(-50%);
}
/*--- Infobox Button ---*/
.eael-infobox .infobox-button a.eael-infobox-button {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 5px 10px;
  -webkit-transition: all 300ms ease-in-out 0s;
  transition: all 300ms ease-in-out 0s;
}
.eael-infobox .infobox-button a.eael-infobox-button .eaa-svg {
  font-size: 16px;
}
.eael-infobox .infobox-button a.eael-infobox-button .eaa-svg svg {
  width: 1em;
  height: 1em;
}
/*--- For icon bg shape alignment ---*/
.eael-infobox-content-align--left.eael-infobox-icon-bg-shape-square .infobox-icon,
.eael-infobox-content-align--left.eael-infobox-icon-bg-shape-radius .infobox-icon,
.eael-infobox-content-align--left.eael-infobox-icon-bg-shape-circle .infobox-icon {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
      -ms-flex-pack: start;
          justify-content: flex-start;
}
/* ... */

